# nrfdfu

./: .clang-format  CMakeLists.txt  README.md  conf.h  dfu.c  dfu.h  dfu_ble.c  dfu_ble.h  dfu_legacy.c  dfu_legacy.h  dfu_serial.c  dfu_serial.h  dfuserial.c  dfuserial.h  log.c  log.h  main.c  meson.build  meson_options.txt  nrf_dfu_handling_error.h  nrf_dfu_req_handler.h  nrfdfu.kdev4  nrfserdfu.kdev4  serialtty.c  serialtty.h  slip.c  slip.h  util.c  util.h
